2004-01-20 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPlusIncr, genUminus, genMinusDec, genCmp,
	shiftL2Left2Result): fixed bug #879326
	(genAnd, genOr, genXor): fixed bug when result was of type AOP_CRY
	(genMultOneByte): fixed bug in signed vs unsigned multiplication
	* sim/ucsim/hc08.src/inst.cc (inst_clr): added missing effective
	address fetch for clr instruction
	* device/lib/hc08/_mulint.c: created optimized assembly version
	* src/SDCCdflow.c (computeDataFlow): fixed bug #878209

2004-01-19 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCicode.c (geniCodeArray): applied patch from Stas Sergeev
	proposed in FR #877103

2004-01-18 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): added missing checks
	* src/SDCCicode.c (usualBinaryConversions): fixed condition
	* src/SDCCicode.c (geniCodeAdd): fixed part of bug #877103

2004-01-16 Klaus Flittner <klaus_flittner@gmx.de>

	* src/ds390/gen.c (aopOp3): fixed the assignment of different dptrs to
	equal operands

2004-01-16 Vangelis Rokas <vrokas@otenet.gr>

	* src/SDCCmain.c (linkEdit): variable $3 of the linker command is
	loaded with the linker search paths (-L arguments) and the libraries
	to be linked with the current source (-l arguments). Changes
	currently will affect only the pic16 port.
	* src/pic16/main.c (_pic16_finaliseOptions): add to the linker
	include path the port specific paths and port specific libraries,
	* gplink command now contains the $3 argument,
	* src/pic16/device.h,
	* src/pic16/device.c,: structure PIC_device is made public and
	renamed to PIC16_device, the same for variable Pics which is renamed
	to Pics16. Updated all references to them.
	* src/pic16/glue.c (pic16glue): corrected bug with code
	initialization which bypassed the variable initializations block.

	* device/lib/pic16/Makefile.rules: removed --penable-stack from
	COMPILE_FLAGS and added the --nostdinc option
